<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.StartFragment" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/welcome_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/keyline_5"
            android:layout_marginTop="@dimen/keyline_5"
            android:layout_marginEnd="@dimen/keyline_5"
            android:text="@string/welcome_label_text"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:textColor="@color/material_on_background_emphasis_high_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/description_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/description_label_text"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="@color/material_on_background_emphasis_medium"
            app:layout_constraintEnd_toEndOf="@+id/welcome_label"
            app:layout_constraintStart_toStartOf="@+id/welcome_label"
            app:layout_constraintTop_toBottomOf="@+id/welcome_label" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/keyline_5"
            android:layout_marginEnd="@dimen/keyline_5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_max="@dimen/max_container_width">

            <TextView
                android:id="@+id/instructions_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/instructions_label_text"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/material_on_background_emphasis_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/host_button"
                style="@style/Widget.ScreenParty.LargeButton"
                android:layout_marginTop="@dimen/keyline_2"
                android:text="@string/host_button_text"
                app:icon="@drawable/ic_baseline_keyboard_arrow_right_24"
                app:iconGravity="end"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/instructions_label" />

            <Button
                android:id="@+id/join_button"
                style="@style/Widget.ScreenParty.LargeButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/keyline_4"
                android:text="@string/join_button_text"
                app:icon="@drawable/ic_baseline_keyboard_arrow_right_24"
                app:iconGravity="end"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/host_button" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/credits_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/keyline_1"
            android:layout_marginEnd="@dimen/keyline_1"
            android:layout_marginBottom="@dimen/keyline_1"
            android:text="@string/credits_label_text"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceCaption"
            android:textColor="@color/material_on_background_disabled"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
